tests/builtin_collision_import_alias_bad.stderr
tests/builtin_collision_import_alias_bad.hop:2:16: error: HOP0000: import binding conflict
