tests/builtin_collision_import_alias_bad.hop
// Verifies named import aliases cannot collide with public builtin symbols.
import "mem" { ArenaAllocator as Logger }

fn main() {}
